--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,61 @@
+alembic==1.0.8
+aniso8601==6.0.0
+attrs==19.1.0
+bcrypt==3.1.6
+blinker==1.4
+bokeh==0.12.5
 certifi==2018.4.16
+cffi==1.12.2
 chardet==3.0.4
-click==6.7
+Click==7.0
+cloudinary==1.15.0
 cycler==0.10.0
+Cython==0.29.7
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.7
+Flask-GoogleMaps==0.2.6
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
+flask-marshmallow==0.10.1
+Flask-Migrate==2.4.0
+flask-restplus==0.12.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 idna==2.7
-itsdangerous==0.24
-Jinja2==2.10
+imgurpython==1.1.7
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jsonschema==3.0.1
 kiwisolver==1.0.1
-MarkupSafe==1.0
+Mako==1.0.7
+MarkupSafe==1.1.1
+marshmallow==2.19.2
 matplotlib==3.0.2
+mock==3.0.5
 mysql-connector-python-rf==2.2.2
 nltk==3.4
 numpy==1.15.4
+pandas==0.24.2
 pbr==5.1.3
 Pillow==5.3.0
+psycopg2==2.7.7
+pycparser==2.19
+PyJWT==1.7.1
 pyparsing==2.3.0
 Pypubsub==4.0.0
+pyrsistent==0.14.11
 pytemperature==1.0
-python-dateutil==2.7.5
-pytz==2018.7
+python-dateutil==2.8.0
+python-editor==1.0.4
+pytz==2018.9
+PyYAML==5.1
 requests==2.19.1
 singledispatch==3.4.0.3
-six==1.11.0
+six==1.12.0
+SQLAlchemy==1.3.1
 stevedore==1.30.1
 tornado==5.1.1
 urllib3==1.23
