--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+attrs==19.1.0
+blinker==1.4
+bokeh==1.3.4
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
 cycler==0.10.0
 Flask==1.0.2
+Flask-GoogleMaps==0.2.6
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
@@ -14,6 +20,7 @@ matplotlib==3.0.2
 mysql-connector-python-rf==2.2.2
 nltk==3.4
 numpy==1.15.4
+packaging==19.1
 pbr==5.1.3
 Pillow==5.3.0
 pyparsing==2.3.0
@@ -21,6 +28,7 @@ Pypubsub==4.0.0
 pytemperature==1.0
 python-dateutil==2.7.5
 pytz==2018.7
+PyYAML==5.1.2
 requests==2.19.1
 singledispatch==3.4.0.3
 six==1.11.0
